# test-react-app

./: .gitignore  .prettierignore  .prettierrc  README.md  ci.yml  package-lock.json  package.json  release.config.js
.github/: CODEOWNERS
.github/actions/hello/: action.yml  index.js
.github/actions/hello-docker/: action.yml  entrypoint.sh
.github/actions/issue/: index.js
.github/actions/slack-message/: .dockerignore  Cargo.toml  Dockerfile  action.yml
.github/actions/slack-message/src/: main.rs  slack.php
.github/workflows/: actions.yml  ci-develop.yml  ci-main.yml  ci.yml  develop-pr-target.yml  develop-pr.yml  develop-push.yml  issue.yml  main-pr-target.yml  main-pr.yml  main-push.yml  release.yml
src/: App.js  App.test.js
