[package]
name = "slack-message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slack-hook = "0.7"
attohttpc = { version = "0.18.0", features = ["json", "form", "rustls"] }
serde_json = "1.0"
env_logger = "0.9"